frame/support/test/tests/pallet_ui/storage_wrong_max_values_attribute.stderr
error: expected `=`
  --> $DIR/storage_wrong_max_values_attribute.rs:18:19
   |
18 |     #[pallet::storage(max_values)]
   |                      ^^^^^^^^^^^^
